--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>easyhr-api</module>
-		<module>easyhr-quartz</module>
+		<module>easyhr-backstage</module>
 	</modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
@@ -92,6 +92,11 @@
 			<version>1.6.0-beta1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.1.10</version>
+		</dependency>
 	</dependencies>
 
 	<build>
